fix typo in data

--- a/html/transform-data.html
+++ b/html/transform-data.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Yi-Ming Gan" />
 
-<meta name="date" content="2021-08-26" />
+<meta name="date" content="2021-08-27" />
 
 <title>R Notebook</title>
 
@@ -1622,7 +1622,7 @@ pre code {
 
 <h1 class="title toc-ignore">R Notebook</h1>
 <h4 class="author">Yi-Ming Gan</h4>
-<h4 class="date">2021-08-26</h4>
+<h4 class="date">2021-08-27</h4>
 
 </div>
 
@@ -1686,7 +1686,7 @@ head(occ_df)</code></pre>
   </script>
 </div>
 <p><code>Paris_MNHN_Number</code> will be written into occurrence.txt but it is fine because it will not be mapped to Darwin Core field in IPT.</p>
-<p>BOLD processID is concatenated with REST API Full Data Retrieval (Specimen + Sequence) url and placed under <code>associatedOccurrences</code> field.</p>
+<p>BOLD processID is concatenated with <a href="https://v3.boldsystems.org/index.php/resources/api?type=webservices#combined">REST API Full Data Retrieval (Specimen + Sequence)</a> url and placed under <code>associatedOccurrences</code> field.</p>
 </div>
 <div id="read-measurementtypes-sheet" class="section level2">
 <h2>Read measurementTypes sheet</h2>
